Enrollment invite link generation complete on backend, progress on implementing enrollment from code and code generation frontend
